# docs/swagger.json
@@ -14,6 +14,45 @@
         "version": "0.0.1"
     },
     "paths": {
+        "/api/extendTokenExpireTime": {
+            "get": {
+                "security": [
+                    {
+                        "BearerIdAuth": []
+                    }
+                ],
+                "description": "Make up a new token to extend expire time",
+                "consumes": [
+                    "text/plain"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "After Authorization"
+                ],
+                "summary": "ExtendTokenExpireTime",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"success\":true,\"data\":{\"token\":\"\"}}",
+                        "schema": {
+                            "$ref": "#/definitions/router.Json200Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Token generating error"
+                    }
+                }
+            }
+        },
         "/api/test": {
             "get": {
                 "security": [
@@ -26,7 +65,7 @@
                     "text/plain"
                 ],
                 "produces": [
-                    "text/plain"
+                    "application/json"
                 ],
                 "tags": [
                     "After Authorization"
@@ -42,10 +81,13 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Pass",
+                        "description": "{\"success\":true,\"data\":{\"user\":\"admin\",\"isTokenValid\":true}}",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/router.Json200Response"
                         }
+                    },
+                    "500": {
+                        "description": "Token generating error"
                     }
                 }
             }
